Fixed the migrations. Moved to TMD Hosting

--- a/MusicCityAnimalRescueManagement/Views/Locations/Index.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Locations/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Fosters and Shelters</h2>
+<h2>Locations - Fosters, Vets, and Shelters</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
