--- a/MusicCityAnimalRescueManagement/Views/Accounting/Entries.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Accounting/Entries.cshtml
@@ -225,6 +225,12 @@
             </th>
         </tr>
     </thead>
+    <tfoot>
+        <tr>
+            <th colspan="5" style="text-align:right">Total:</th>
+            <th></th>
+        </tr>
+    </tfoot>
     <tbody>
         @foreach (IncomeEntry entry in Model.IncomeEntries)
         {
@@ -254,6 +260,7 @@
                     </td>
                     <td>
                         @entry.NumCatAdoptions
+                        @{entry}
                     </td>
                     <td>
                         @entry.NumDogAdoptions
@@ -316,22 +323,51 @@
     @Scripts.Render("~/bundles/dataTables")
 
     <script>
+        // WORKS!
+        //$(document).ready(function () {
+        //    $('table.display').DataTable();
+        //});
+        
+        
         $(document).ready(function () {
-            $('table.display').DataTable();
-        });
-        
-        
-         @*$('#ExpenseEntries').DataTable({
-            drawCallback: function () {
-                var api = this.api();
-                $(api.table().footer()).html(
-                  api.column(4, { page: 'current' }).data().sum()
-                );
-            }
+            $('#ExpenseEntries').DataTable({
+                "footerCallback": function (tfoot, data, start, end, display) {
+                    var api = this.api(), data;
+
+                    // Remove the formatting to get integer data for summation
+                    var intVal = function (i) {
+                        return typeof i === 'string' ?
+                            i.replace(/[\$,]/g, '') * 1 :
+                            typeof i === 'number' ?
+                            i : 0;
+                    };
+
+                    // Total over all pages
+                    total = api
+                        .column(6)
+                        .data()
+                        .reduce(function (a, b) {
+                            return intVal(a) + intVal(b);
+                        }, 0);
+
+                    // Total over this page
+                    pageTotal = api
+                        .column(6, { page: 'current' })
+                        .data()
+                        .reduce(function (a, b) {
+                            return intVal(a) + intVal(b);
+                        }, 0);
+
+                    // Update footer
+                    $(api.column(6).footer()).html(
+                        '$' + pageTotal + ' ( $' + total + ' total)'
+                    );
+                }
+            });
         });
     </script>
 
-    <script>
+    @*<script>
              $('#IncomeEntries').DataTable({
                 drawCallback: function () {
                     var api = this.api();
@@ -339,8 +375,8 @@
                       api.column(4, { page: 'current' }).data().sum()
                     );
                 }
-            });*@
-    </script>
+            });
+    </script>*@
 }
 
 
