Working on MCARID generation

--- a/MusicCityAnimalRescueManagement/Views/Animals/Index.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Animals/Index.cshtml
@@ -109,7 +109,7 @@
                     @Html.DisplayFor(modelItem => item.MCARId)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.name)
+                    <b>@Html.DisplayFor(modelItem => item.name)</b>
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AgeY)
@@ -281,7 +281,7 @@
                     @Html.DisplayFor(modelItem => item.MCARId)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.name)
+                    <b>@Html.DisplayFor(modelItem => item.name)</b>
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AgeY)
@@ -449,7 +449,7 @@
                     @Html.DisplayFor(modelItem => item.MCARId)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.name)
+                    <b>@Html.DisplayFor(modelItem => item.name)</b>
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AgeY)
