--- a/MusicCityAnimalRescueManagement/Views/Vettings/Index.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Vettings/Index.cshtml
@@ -195,8 +195,8 @@
                     @Html.DisplayFor(modelItem => item.AdtlComments)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.id }) |
+                    @Html.ActionLink("Edit", "Edit", new { id = item.id }) 
+                    @Html.ActionLink("Details", "Details", new { id = item.id }) 
                     @Html.ActionLink("Delete", "Delete", new { id = item.id })
                 </td>
             </tr>
