--- a/MusicCityAnimalRescueManagement/Views/Shared/_NavBar.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Shared/_NavBar.cshtml
@@ -19,6 +19,7 @@
                 <li>@Html.ActionLink("Animals", "Index", "Animals")</li>
                 <li>@Html.ActionLink("Vetting", "Index", "Vettings")</li>
                 <li>@Html.ActionLink("Fosters/Locations", "Index", "Locations")</li>
+                <li>@Html.ActionLink("Equipment", "Index", "Equipment")</li>
 
                 @*<li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
