--- a/MusicCityAnimalRescueManagement/Views/Shared/_NavBar-Account.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Shared/_NavBar-Account.cshtml
@@ -14,7 +14,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
 
 
                 @*<li>@Html.ActionLink("About", "About", "Home")</li>
