--- a/MusicCityAnimalRescueManagement/Views/Accounting/Entries.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Accounting/Entries.cshtml
@@ -26,7 +26,7 @@
     <p>
         @Html.ActionLink("Create New Expense Entry", "CreateExpense")
     </p>
-    <table class="table-responsive" id="ExpenseEntries">
+    <table class="display" id="ExpenseEntries">
         <thead>
         <tr>
             <th>
@@ -77,12 +77,12 @@
             @*<th></th>*@
         </tr>
         </thead>
-        <tfoot>
+        @*<tfoot>
             <tr>
                 <th colspan="2" style="text-align:right">Total:</th>
                 <th></th>
             </tr>
-        </tfoot>
+        </tfoot>*@
         <tbody>
             @foreach (ExpenseEntry entry in Model.ExpenseEntries)
             {
