--- a/MusicCityAnimalRescueManagement/Views/Vettings/CreateDog.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Vettings/CreateDog.cshtml
@@ -263,7 +263,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DogVetting.FleaTick, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.DogVetting.FleaTick, new SelectList(Model.Meds, "id", "Name"), "Select a Medication", htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.DogVetting.FleaTickId, new SelectList(Model.Meds, "id", "Name"), "Select a Medication", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Meds, "", new { @class = "text-danger" })
             </div>
         </div>
