More changes to Equipment

--- a/MusicCityAnimalRescueManagement/Views/Equipment/Details.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Equipment/Details.cshtml
@@ -24,7 +24,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LocationId)
+            @Html.DisplayFor(model => model.Location.name)
         </dd>
 
         <dt>
