--- a/MusicCityAnimalRescueManagement/Views/Equipment/Delete.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Equipment/Delete.cshtml
@@ -13,19 +13,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Location.name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Location.name)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.description)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LocationId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LocationId)
         </dd>
 
         <dt>
