--- a/MusicCityAnimalRescueManagement/Views/Animals/Index.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Animals/Index.cshtml
@@ -200,6 +200,183 @@
     </tbody>
 </table>
 
+<center><h2>Active but not Ready for Adoption</h2></center>
+<table class="display" id="NotReadyToAdopt">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.AnimalType.AnimalTypeName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.MCARId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Sex)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AgeY)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AgeM)
+            </th>
+            <th>
+                Pull Location
+                @*@Html.DisplayNameFor(model => model.PullLocation.name)*@
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IntakeDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.colors)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.breed)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Temperament)
+            </th>
+            <th>
+                Current Location
+                @*@Html.DisplayNameFor(model => model.CurrentFoster.name)*@
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.MicrochipNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PullFee)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AdoptionFee)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.housetraining)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Adopted)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ReadyForAdoption)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AdtlComments)
+            </th>
+            <th>
+                Actions
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Where(e => e.ReadyForAdoption == false).Where(e => e.Adopted == false))
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AnimalType.AnimalTypeName)
+                    @*@Html.DisplayFor(modelItem => item.StrAccountType.AccountTypeName)*@
+                    @*@Html.DisplayFor(modelItem => item.StrAnimalType.AnimalTypeName)*@
+
+                    @*@if (item.AnimalTypeID.ToString() == "1")
+                                {
+                                    @:Dog
+                        }
+                                else if (item.AnimalTypeID.ToString() == "0")
+                                {
+                                    @:Cat
+                        }
+                                else
+                                {*@
+                    @*@:Other
+                        }*@
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MCARId)
+                </td>
+                <td>
+                    <b>@Html.DisplayFor(modelItem => item.name)</b>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Sex.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AgeY)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AgeM)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PullLocation.name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IntakeDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.colors)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.breed)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Temperament)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CurrentFoster.name)
+
+                    @*@Html.DisplayFor(modelItem => item.CurrentFosterID)*@
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MicrochipNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PullFee)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AdoptionFee)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.housetraining)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Adopted)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ReadyForAdoption)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AdtlComments)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.id })
+                    <br>
+                    @if (item.AnimalType.AnimalTypeName == "Dog")
+                    { 
+                        @Html.ActionLink("Add Vetting", "CreateDog", "Vettings");
+                    }
+                    else
+                    { 
+                        @Html.ActionLink("Add Vetting", "CreateCat", "Vettings");
+                    }
+
+
+                    @*@Html.ActionLink("Add Vetting", "AddVetting", "Vetting", new { id = item.id })*@
+                    <br>
+                    @Html.ActionLink("Details", "Details", new { id = item.id })
+                    <br>
+                    @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                </td>
+            </tr>
+
+        }
+    </tbody>
+</table>
+
 
 <center><h2>Adopted</h2></center>
 <table class="display" id="Adopted">
