Updated Locations CRUD pages for Locations

--- a/MusicCityAnimalRescueManagement/Views/Locations/Index.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Locations/Index.cshtml
@@ -10,7 +10,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table" id="locations">
+<table class="display" id="locations">
     <thead>
         <tr>
             <th>
