--- a/MusicCityAnimalRescueManagement/Views/Locations/Create.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Locations/Create.cshtml
@@ -7,10 +7,10 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Location</h4>
         <hr />
@@ -97,6 +97,27 @@
             </div>
         </div>
 
+        <hr />
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.isBasicVaxLocation, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.isBasicVaxLocation)
+                    @Html.ValidationMessageFor(model => model.isBasicVaxLocation, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.isRabiesVaxLocation, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.isRabiesVaxLocation)
+                    @Html.ValidationMessageFor(model => model.isRabiesVaxLocation, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
