Changes needed to add CatVetting. Also made changes to dog vetting, locations, and medication for conformity.

--- a/MusicCityAnimalRescueManagement/Views/Medications/Details.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Medications/Details.cshtml
@@ -59,6 +59,10 @@
             @Html.DisplayFor(model => model.isDewormer)
         </dd>
 
+        <dd>
+            @Html.DisplayFor(model => model.isMicrochipManufacturer)
+        </dd>
+
     </dl>
 </div>
 <p>
