--- a/MusicCityAnimalRescueManagement/Views/Locations/Create.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Locations/Create.cshtml
@@ -119,6 +119,15 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.LabelFor(model => model.isAdoptionVenue, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.isAdoptionVenue)
+                    @Html.ValidationMessageFor(model => model.isAdoptionVenue, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
