Mainly worked on CatVetting

--- a/MusicCityAnimalRescueManagement/Views/Vettings/Index.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Vettings/Index.cshtml
@@ -1,252 +1,10 @@
-﻿@model IEnumerable<MusicCityAnimalRescueManagement.Models.Animals.DogVetting>
-
+﻿
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Vetting Records</h2>
+<h2>Pick a team!</h2>
 
-<p>
-    @Html.ActionLink("Add New Dog Record", "CreateDog")
-</p>
-
-<style>
-    .container {
-        margin-right: 10px;
-        margin-left: 10px;
-    }
-</style>
-<h3><center>Dogs</center></h3>
-<table class="display" id="dogs">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Animal.name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Sterilized)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SterilizationDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SterilizationLocation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Bordetella)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BordetellaDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BordetellaLocation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Rabies)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RabiesDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RabiesLocation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DA2PPR1)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DA2PPR1Date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DA2PPR1Location)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DA2PPR2)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DA2PPR2Date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DA2PPR2Location)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DA2PPR3)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DA2PPR3Date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DA2PPR3Location)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HeartwormTested)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HeartwormDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HeartwormLocation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HeartwormTestResult)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DewormerDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DewormerLocation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Dewormer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FleaTickDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FleaTickLocation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FleaTick)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AdtlComments)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Where(e => e.Animal.Adopted == false))
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Animal.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Sterilized)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SterilizationDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SterilizationLocation.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Bordetella)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.BordetellaDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.BordetellaLocation.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Rabies)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RabiesDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RabiesLocation.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DA2PPR1)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DA2PPR1Date)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DA2PPR1Location.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DA2PPR2)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DA2PPR2Date)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DA2PPR2Location.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DA2PPR3)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DA2PPR3Date)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DA2PPR3Location.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.HeartwormTested)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.HeartwormDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.HeartwormLocation.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.HeartwormTestResult)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DewormerDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DewormerLocation.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Dewormer)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FleaTickDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FleaTickLocation.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FleaTick.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AdtlComments)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.id })
-                    @Html.ActionLink("Details", "Details", new { id = item.id })
-                    @Html.ActionLink("Delete", "Delete", new { id = item.id })
-                </td>
-            </tr>
-        }
-    </tbody>
-
-</table>
-
-@section scripts
-{
-    @Scripts.Render("~/bundles/dataTables")
-
-    <script>
-        $(document).ready(function () {
-            $('table.display').DataTable();
-        });
-
-
-         @*$('#ExpenseEntries').DataTable({
-            drawCallback: function () {
-                var api = this.api();
-                $(api.table().footer()).html(
-                  api.column(4, { page: 'current' }).data().sum()
-                );
-            }
-        });
-    </script>
-
-    <script>
-             $('#IncomeEntries').DataTable({
-                drawCallback: function () {
-                    var api = this.api();
-                    $(api.table().footer()).html(
-                      api.column(4, { page: 'current' }).data().sum()
-                    );
-                }
-            });*@
-    </script>
-}
+<h3>@Html.ActionLink("Dog Team!", "DogIndex")</h3>
+<h3>@Html.ActionLink("Cat Team!", "CatIndex")</h3>
