--- a/MusicCityAnimalRescueManagement/Views/Shared/_NavBar.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Shared/_NavBar.cshtml
@@ -27,7 +27,8 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="True">Vetting <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li>@Html.ActionLink("List", "Index", "Vettings")</li>
+                        <li>@Html.ActionLink("Dogs", "DogIndex", "Vettings")</li>
+                        <li>@Html.ActionLink("Cats", "CatIndex", "Vettings")</li>
                         <li>@Html.ActionLink("Medications", "Index", "Medications")</li>
 
                     </ul>
