--- a/MusicCityAnimalRescueManagement/Views/Vettings/CreateDog.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Vettings/CreateDog.cshtml
@@ -31,7 +31,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.DogVetting.MicrochipNumber, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.DogVetting.MicrochipNumber)
+            @Html.EditorFor(model => model.DogVetting.MicrochipNumber, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.DogVetting.MicrochipNumber, "", new { @class = "text-danger" })
         </div>
     </div>
