--- a/MusicCityAnimalRescueManagement/Views/Locations/Details.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Locations/Details.cshtml
@@ -83,6 +83,14 @@
             @Html.DisplayFor(model => model.isPullLocation)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.isAdoptionVenue)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.isAdoptionVenue)
+        </dd>
+
     </dl>
 </div>
 <p>
