--- a/MusicCityAnimalRescueManagement/Views/Accounting/EditExpense.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Accounting/EditExpense.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>EditExpense</h2>
+<h2>Edit Expense Entry</h2>
 
 @using (Html.BeginForm())
 {
