--- a/MusicCityAnimalRescueManagement/Views/Locations/Edit.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Locations/Edit.cshtml
@@ -119,6 +119,16 @@
                     @Html.ValidationMessageFor(model => model.isRabiesVaxLocation, "", new { @class = "text-danger" })
                 </div>
             </div>
+        </div>        
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.isAdoptionVenue, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.isAdoptionVenue)
+                    @Html.ValidationMessageFor(model => model.isAdoptionVenue, "", new { @class = "text-danger" })
+                </div>
+            </div>
         </div>
 
         <div class="form-group">
