--- a/MusicCityAnimalRescueManagement/Views/Locations/Index.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Locations/Index.cshtml
@@ -94,8 +94,8 @@
                     @Html.DisplayFor(modelItem => item.isRabiesVaxLocation)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.id }) |
+                    @Html.ActionLink("Edit", "Edit", new { id = item.id }) 
+                    @Html.ActionLink("Details", "Details", new { id = item.id }) 
                     @Html.ActionLink("Delete", "Delete", new { id = item.id })
                 </td>
             </tr>
