--- a/MusicCityAnimalRescueManagement/Views/Animals/Index.cshtml
+++ b/MusicCityAnimalRescueManagement/Views/Animals/Index.cshtml
@@ -47,7 +47,6 @@
             </th>
             <th>
                 Pull Location
-                @*@Html.DisplayNameFor(model => model.PullLocation.name)*@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IntakeDate)
@@ -66,11 +65,7 @@
             </th>
             <th>
                 Current Location
-                @*@Html.DisplayNameFor(model => model.CurrentFoster.name)*@
             </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.MicrochipNumber)
-            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.PullFee)
             </th>
@@ -90,6 +85,9 @@
                 @Html.DisplayNameFor(model => model.AdtlComments)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.InRescueTime)
+            </th>
+            <th>
                 Actions
             </th>
         </tr>
@@ -100,21 +98,6 @@
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.AnimalType.AnimalTypeName)
-                    @*@Html.DisplayFor(modelItem => item.StrAccountType.AccountTypeName)*@
-                    @*@Html.DisplayFor(modelItem => item.StrAnimalType.AnimalTypeName)*@
-
-                    @*@if (item.AnimalTypeID.ToString() == "1")
-                                {
-                                    @:Dog
-                        }
-                                else if (item.AnimalTypeID.ToString() == "0")
-                                {
-                                    @:Cat
-                        }
-                                else
-                                {*@
-                    @*@:Other
-                        }*@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.MCARId)
@@ -151,12 +134,7 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.CurrentFoster.name)
-
-                    @*@Html.DisplayFor(modelItem => item.CurrentFosterID)*@
                 </td>
-                @*<td>
-                    @Html.DisplayFor(modelItem => item.MicrochipNumber)
-                </td>*@
                 <td>
                     @Html.DisplayFor(modelItem => item.PullFee)
                 </td>
@@ -176,6 +154,19 @@
                     @Html.DisplayFor(modelItem => item.AdtlComments)
                 </td>
                 <td>
+                    @if (item.AdoptionDate.HasValue)
+                    {
+                        item.InRescueTime = Math.Round(((item.AdoptionDate.Value - item.IntakeDate).TotalDays / 30), 2);
+                    }
+                    else
+                    {
+                        item.InRescueTime = Math.Round(((DateTime.Today - item.IntakeDate).TotalDays / 30), 2);
+                    }
+                    
+                    
+                    @Html.DisplayFor(modelItem => item.InRescueTime)
+                </td>
+                <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.id })
                     <br>
                     @if (item.AnimalType.AnimalTypeName == "Dog")
@@ -186,9 +177,6 @@
                     { 
                         @Html.ActionLink("Add Vetting", "CreateCat", "Vettings");
                     }
-
-
-                    @*@Html.ActionLink("Add Vetting", "AddVetting", "Vetting", new { id = item.id })*@
                     <br>
                     @Html.ActionLink("Details", "Details", new { id = item.id })
                     <br>
@@ -224,7 +212,6 @@
             </th>
             <th>
                 Pull Location
-                @*@Html.DisplayNameFor(model => model.PullLocation.name)*@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IntakeDate)
@@ -243,11 +230,7 @@
             </th>
             <th>
                 Current Location
-                @*@Html.DisplayNameFor(model => model.CurrentFoster.name)*@
             </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.MicrochipNumber)
-            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.PullFee)
             </th>
@@ -267,6 +250,9 @@
                 @Html.DisplayNameFor(model => model.AdtlComments)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.InRescueTime)
+            </th>
+            <th>
                 Actions
             </th>
         </tr>
@@ -277,21 +263,6 @@
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.AnimalType.AnimalTypeName)
-                    @*@Html.DisplayFor(modelItem => item.StrAccountType.AccountTypeName)*@
-                    @*@Html.DisplayFor(modelItem => item.StrAnimalType.AnimalTypeName)*@
-
-                    @*@if (item.AnimalTypeID.ToString() == "1")
-                                {
-                                    @:Dog
-                        }
-                                else if (item.AnimalTypeID.ToString() == "0")
-                                {
-                                    @:Cat
-                        }
-                                else
-                                {*@
-                    @*@:Other
-                        }*@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.MCARId)
@@ -329,11 +300,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.CurrentFoster.name)
 
-                    @*@Html.DisplayFor(modelItem => item.CurrentFosterID)*@
                 </td>
-                @*<td>
-                    @Html.DisplayFor(modelItem => item.MicrochipNumber)
-                </td>*@
                 <td>
                     @Html.DisplayFor(modelItem => item.PullFee)
                 </td>
@@ -353,6 +320,9 @@
                     @Html.DisplayFor(modelItem => item.AdtlComments)
                 </td>
                 <td>
+                    @Html.DisplayFor(modelItem => item.InRescueTime)
+                </td>
+                <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.id })
                     <br>
                     @if (item.AnimalType.AnimalTypeName == "Dog")
@@ -363,9 +333,6 @@
                     { 
                         @Html.ActionLink("Add Vetting", "CreateCat", "Vettings");
                     }
-
-
-                    @*@Html.ActionLink("Add Vetting", "AddVetting", "Vetting", new { id = item.id })*@
                     <br>
                     @Html.ActionLink("Details", "Details", new { id = item.id })
                     <br>
@@ -402,7 +369,6 @@
             </th>
             <th>
                 Pull Location
-                @*@Html.DisplayNameFor(model => model.PullLocation.name)*@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IntakeDate)
@@ -421,11 +387,7 @@
             </th>
             <th>
                 Current Location
-                @*@Html.DisplayNameFor(model => model.CurrentFoster.name)*@
             </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.MicrochipNumber)
-            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.PullFee)
             </th>
@@ -445,6 +407,9 @@
                 @Html.DisplayNameFor(model => model.AdtlComments)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.InRescueTime)
+            </th>
+            <th>
                 Actions
             </th>
         </tr>
@@ -455,21 +420,6 @@
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.AnimalType.AnimalTypeName)
-                    @*@Html.DisplayFor(modelItem => item.StrAccountType.AccountTypeName)*@
-                    @*@Html.DisplayFor(modelItem => item.StrAnimalType.AnimalTypeName)*@
-
-                    @*@if (item.AnimalTypeID.ToString() == "1")
-                                {
-                                    @:Dog
-                        }
-                                else if (item.AnimalTypeID.ToString() == "0")
-                                {
-                                    @:Cat
-                        }
-                                else
-                                {*@
-                    @*@:Other
-                        }*@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.MCARId)
@@ -506,12 +456,7 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.CurrentFoster.name)
-
-                    @*@Html.DisplayFor(modelItem => item.CurrentFosterID)*@
                 </td>
-                @*<td>
-                    @Html.DisplayFor(modelItem => item.MicrochipNumber)
-                </td*@>
                 <td>
                     @Html.DisplayFor(modelItem => item.PullFee)
                 </td>
@@ -529,6 +474,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AdtlComments)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.InRescueTime)
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.id })
@@ -576,7 +524,6 @@
             </th>
             <th>
                 Pull Location
-                @*@Html.DisplayNameFor(model => model.PullLocation.name)*@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IntakeDate)
@@ -595,11 +542,7 @@
             </th>
             <th>
                 Current Location
-                @*@Html.DisplayNameFor(model => model.CurrentFoster.name)*@
             </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.MicrochipNumber)
-            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.PullFee)
             </th>
@@ -619,6 +562,9 @@
                 @Html.DisplayNameFor(model => model.AdtlComments)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.InRescueTime)
+            </th>
+            <th>
                 Actions
             </th>
         </tr>
@@ -629,21 +575,6 @@
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.AnimalType.AnimalTypeName)
-                    @*@Html.DisplayFor(modelItem => item.StrAccountType.AccountTypeName)*@
-                    @*@Html.DisplayFor(modelItem => item.StrAnimalType.AnimalTypeName)*@
-
-                    @*@if (item.AnimalTypeID.ToString() == "1")
-                                {
-                                    @:Dog
-                        }
-                                else if (item.AnimalTypeID.ToString() == "0")
-                                {
-                                    @:Cat
-                        }
-                                else
-                                {*@
-                    @*@:Other
-                        }*@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.MCARId)
@@ -680,12 +611,8 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.CurrentFoster.name)
-
-                    @*@Html.DisplayFor(modelItem => item.CurrentFosterID)*@
                 </td>
-                @*<td>
-                    @Html.DisplayFor(modelItem => item.MicrochipNumber)
-                </td*@>
+
                 <td>
                     @Html.DisplayFor(modelItem => item.PullFee)
                 </td>
@@ -703,6 +630,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AdtlComments)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.InRescueTime)
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.id })
@@ -727,21 +657,14 @@
 </table>
 
 
-
 @section scripts
-    {
-        @Scripts.Render("~/bundles/dataTables")
+{
+    @Scripts.Render("~/bundles/dataTables")
 
-<script>
-        $(document).ready(function () {
-            $('table.display').DataTable();
-        });
-</script>
-
-@*<script>
-    $(document).ready(function () {
-        $("#All").DataTable();
-    });
-
-</script>*@
-    }
+    <script>
+        $(document)
+            .ready(function() {
+                $('table.display').DataTable();
+            });
+    </script>
+}
